--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,7 @@
         cursor: pointer;
         position: fixed;
         display: flex;
+        font-family: 'Lato', sans-serif;
         justify-content: center;
         background-color: #222942;
         font-size: 4vw;
@@ -11,4 +12,12 @@
         box-shadow: 0 1px 5px black;
         color: white;
         z-index: 100;
+    }
+
+    @media (max-width: 768px) {
+        .header {
+            padding-top: 15px;
+            padding-bottom: 15px;
+            font-size: 7vw;
+        }    
     }
