--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@200;300&family=Lato&display=swap');
+
+/* @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@200;300&family=Lato&family=Noto+Sans+JP:wght@500&display=swap'); */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
