--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
   .App {
     min-height: 100vh;
-    background-color: #fcf8f8;
+    background-color: #353e61;
     padding-top: 110px;
     padding-bottom: 70px;
   }
