--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@200;300&family=Lato&display=swap');
 
-@import "react-alice-carousel/lib/alice-carousel.css";
+/* @import "react-alice-carousel/lib/alice-carousel.css"; */
 
 /* @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@200;300&family=Lato&family=Noto+Sans+JP:wght@500&display=swap'); */
 
