--- a/src/components/SingleContent/SingleContent.css
+++ b/src/components/SingleContent/SingleContent.css
@@ -4,6 +4,7 @@
         display: flex;
         flex-direction: column;
         width: 200px;
+        height: 425px;
         padding: 5px;
         margin: 10px 4px;
         background-color: #272e49;
@@ -19,8 +20,12 @@
 
     @media (max-width: 550px) {
         .media {
-            width: 40%;
+            /* width: 80%; */
+            width: 250px;
+            height: 475px;
             margin-bottom: 15px;
+            /* justify-content: space-around; */
+            /* flex-direction: row; */
         }
     }
 
