--- a/src/components/ContentModal/ContentModal.css
+++ b/src/components/ContentModal/ContentModal.css
@@ -1,21 +1,39 @@
 
 
+    .modal-box {
+      margin-top: 1%;
+      margin-left: 2%;
+    }
+
+    @media (max-width: 835px) {
+      .modal-box {
+        margin: 0;
+      }
+    }
+
     .ContentModal__landscape {
         object-fit: contain;
         border-radius: 10px;
+        width: 450px;
+        /* justify-content: center;
+        align-items: center; */
       }
       
       .ContentModal__portrait {
         display: none;
         object-fit: contain;
+        /* width: 750px; */
+        height: 550px;
         /* margin-top: 5%; */
-        /* margin-bottom: -50px; */
+        /* margin-bottom: px; */
         border-radius: 10px;
       }
       
       .tagline {
         padding-bottom: 10px;
         align-self: center;
+        font-size: 3.5vw;
+        /* padding-top: 10px; */
       }
       
       .ContentModal {
@@ -24,13 +42,15 @@
         justify-content: space-between;
         height: 100%;
         width: 100%;
-        overflow-y: scroll;
-        scrollbar-width: none;
+        /* margin-top: 5px;
+        margin-bottom: 15px; */
+        /* overflow-y: auto; */
+        /* scrollbar-width: thin; */
       }
       
-      .ContentModal::-webkit-scrollbar {
-        display: none;
-      }
+      /* .ContentModal::-webkit-scrollbar {
+        display: block;
+      } */
       
       .ContentModal__about {
         padding: 10px;
@@ -40,25 +60,32 @@
         flex-direction: column;
         justify-content: space-evenly;
         font-weight: 300;
+        /* overflow-y: auto; */
+
       }
       
       .ContentModal__title {
         height: 12%;
-        font-size: 5vw;
+        font-size: 4vw;
         display: flex;
         align-items: center;
+        margin-bottom: 15px;
         justify-content: center;
       }
       
       .ContentModal__description {
         display: flex;
-        height: 40%;
+        height: 45%;
         overflow-y: scroll;
         padding: 15px;
         border-radius: 20px;
         scrollbar-width: thin;
         box-shadow: inset 0 0 5px #000000;
         text-align: justify;
+        font-size: 3vw;
+        /* padding-bottom: 15px; */
+        /* margin-top: -5px; */
+        margin-bottom: 20px;
       }
       
       .ContentModal__description::-webkit-scrollbar {
@@ -76,7 +103,7 @@
         .ContentModal {
           flex-direction: row;
           justify-content: space-around;
-          padding: 10px 0;
+          padding: 5px 0;
         }
         .ContentModal__about {
           width: 58%;
@@ -84,7 +111,7 @@
           height: 100%;
         }
         .ContentModal__title {
-          font-size: 3.5vw;
+          font-size: 3vw;
         }
         .ContentModal__description {
           font-size: 22px;
